--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto&display=swap");
 /* Responsive Breakpoints */
-/* Auto-prefixer mixin */
 /* Colours */
 html {
   box-sizing: border-box;
   font-size: 10px;
   font-family: "Poppins", sans-serif;
-  scroll-snap-type: y mandatory;
 }
 
 *, *:before, *:after {
@@ -25,7 +23,6 @@ html {
   width: 90vw;
   max-width: 110rem;
   margin: auto;
-  scroll-snap-align: start;
   overflow: hidden;
 }
 
@@ -68,7 +65,7 @@ p {
   flex-direction: row;
   justify-self: flex-end;
   width: max-content;
-  border: 2px solid #f7f7f7;
+  border: 2px solid #fff;
   border-radius: 1rem;
   box-shadow: -7px -7px 17px #fff, 7px 7px 17px rgba(70, 70, 70, 0.15);
   overflow: hidden;
@@ -77,7 +74,7 @@ p {
   list-style-type: none;
 }
 #navbar ul li a {
-  display: inline-block;
+  display: flex;
   font-size: 2.3rem;
   line-height: 3.5rem;
   text-decoration: none;
@@ -87,7 +84,7 @@ p {
 #navbar ul li a:hover, #navbar ul li a:active {
   font-weight: bold;
   color: #171515;
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
 }
 
 /* HOME */
@@ -117,7 +114,7 @@ p {
   list-style-type: none;
   margin: 1rem;
   border-radius: 50%;
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
 }
 #home .socialmedia-icons li a {
   margin: auto auto;
@@ -161,7 +158,7 @@ p {
   grid-template-columns: repeat(5, 1fr);
   border-radius: 0.6rem;
   background: #F2F4FA;
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
   padding: 1rem 2rem;
   margin-bottom: 4rem;
   max-width: 100%;
@@ -218,7 +215,7 @@ p {
   height: 11rem;
   width: 11rem;
   border-radius: 50%;
-  box-shadow: inset 5px 5px 5px 0px #d1d9e6, inset -4px -4px 4px 0px #ffffff;
+  box-shadow: inset 5px 5px 5px 0px #d1d9e6, inset -4px -4px 4px 0px #fff;
   margin: 1rem 2rem;
 }
 #about #about-skills .skills .skill-icons li i {
@@ -251,7 +248,7 @@ p {
   background-color: #F2F4FA;
   margin: 0 auto 0.5rem;
   border-radius: 2%;
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
 }
 #about #about-message .card p {
   margin-bottom: 3rem;
@@ -262,7 +259,7 @@ p {
   border: 2px solid #bdbdbd46;
   border-radius: 1.2rem;
   background: #F2F4FA;
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
 }
 #about #about-message .card button a {
   font-size: 2rem;
@@ -271,7 +268,7 @@ p {
   text-decoration: none;
 }
 #about #about-message .card button:hover {
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
   transform: scale(1.05);
 }
 #about #about-message #about-services .card {
@@ -310,7 +307,7 @@ p {
   padding: 0.5rem;
   margin: 1rem auto;
   border-radius: 1rem;
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
 }
 #work .portfolio .project .project-img {
   margin: 0 auto;
@@ -345,11 +342,12 @@ p {
 }
 #work .portfolio .project .project-info .project-info-languages li {
   border-radius: 0.5rem;
+  border: 2px solid #bdbdbd46;
   padding: 1rem;
   margin: 0.5rem;
   font-size: 1.5rem;
   line-height: 1.5rem;
-  box-shadow: 5px 5px 5px 0px #D1D9E6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
 }
 #work .portfolio .project .project-info .project-info-languages .html5 {
   color: #DD4B25;
@@ -368,7 +366,7 @@ p {
 #contact .form-container {
   max-width: 80rem;
   border-radius: 2%;
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
   margin: 0 auto;
 }
 #contact form {
@@ -387,7 +385,7 @@ p {
   margin: 0.4rem 0.4rem;
   background: #F2F4FA;
   border-radius: 0.6rem;
-  box-shadow: inset 5px 5px 5px 0px #d1d9e6, inset -4px -4px 4px 0px #ffffff;
+  box-shadow: inset 5px 5px 5px 0px #d1d9e6, inset -4px -4px 4px 0px #fff;
   appearance: none;
   -webkit-appearance: none;
 }
@@ -400,7 +398,7 @@ p {
 #contact form #submit {
   width: 30%;
   border: 2px solid #bdbdbd46;
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
 }
 #contact form #submit:hover {
   transform: scale(1.05);
@@ -428,7 +426,7 @@ footer .socialmedia-icons li {
   list-style-type: none;
   margin: 1rem;
   border-radius: 20%;
-  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #fff;
 }
 footer .socialmedia-icons li a {
   margin: auto auto;
@@ -480,11 +478,6 @@ footer p {
   #navbar ul li a {
     font-size: 2.1rem;
     padding: 1rem;
-  }
-  #navbar ul li a:hover, #navbar ul li a:active {
-    background: #15A3FF;
-    color: #fff;
-    box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
   }
 
   /* HOME */
