Fixed some html syntax errors.

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -422,7 +422,7 @@ p
             font-size: 3rem
             padding: 2rem
 
-        input
+        input, textarea
             font-size: 1.8rem
             padding: 1rem
             margin: 0.4rem 0.4rem
