--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,7 +379,7 @@ p {
   font-size: 3rem;
   padding: 2rem;
 }
-#contact form input {
+#contact form input, #contact form textarea {
   font-size: 1.8rem;
   padding: 1rem;
   margin: 0.4rem 0.4rem;
