--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -390,6 +390,7 @@ p
                         padding: 1rem
                         margin: 0.5rem
                         font-size: 1.5rem
+                        font-weight: bold
                         line-height: 1.5rem
                         box-shadow: 5px 5px 5px 0px $glacier-gray, -4px -4px 4px 0px $white
 
@@ -398,6 +399,9 @@ p
 
                     .css3 
                         color: $css-icon
+
+                    .js
+                        color: $js-icon
 
 /* CONTACT */
 #contact
